[package]
name = "ymmp"
description = "Yumetter Messaging Protocol"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/siketyan/ymmp"
repository = "https://github.com/siketyan/ymmp.git"
authors = ["Naoki Ikeguchi <me@s6n.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
